# surgicalBot

./: .gitattributes  README.md  requirements.py
end_effector_plugin/: CMakeLists.txt  package.xml
end_effector_plugin/src/: EndEffectorPositionPlugin.cc
inverse_kinematics/: README.md  package.xml  setup.py
inverse_kinematics/inverse_kinematics/: dummy_pub.py  inverse_kinematics.py  inverse_kinematics_check.py
inverse_kinematics/launch/: inverse_kinematics.launch.py
inverse_kinematics_interfaces/: CMakeLists.txt  README.md  package.xml
inverse_kinematics_interfaces/action/: Posegoal.action
publishers/: README.md  package.xml  setup.py
publishers/publishers/: joint_publisher.py
surgical_tools_sorter/: CMakeLists.txt  package.xml
surgical_tools_sorter/config/: bridge.yaml
surgical_tools_sorter/launch/: ign_gazebo.launch.py
surgical_tools_sorter/models/robot_arm/: eb100.sdf
surgical_tools_sorter/models/robot_arm/base_link/: base_link.STL
surgical_tools_sorter/models/robot_arm/camera_link/: camera.stl  camera_link.STL
surgical_tools_sorter/models/robot_arm/gripper_left_link/: gripper_left_link.STL
surgical_tools_sorter/models/robot_arm/gripper_right_link/: gripper_right_link.STL
surgical_tools_sorter/models/robot_arm/link_1/: link1.STL
surgical_tools_sorter/models/robot_arm/link_2/: link2.STL
surgical_tools_sorter/models/robot_arm/link_3/: link3.STL
surgical_tools_sorter/models/robot_arm/link_4/: link4.STL
surgical_tools_sorter/models/robot_arm/link_5/: link5.STL
surgical_tools_sorter/models/robot_arm/link_6/: link6.STL
surgical_tools_sorter/models/scalpel/: scalpel.sdf
surgical_tools_sorter/models/scalpel/meshes/: scalpel_v2.mtl
surgical_tools_sorter/models/scissors/: scissors.sdf
surgical_tools_sorter/models/scissors/meshes/: scissors_v3.mtl
surgical_tools_sorter/models/syringe/: syringe.sdf
surgical_tools_sorter/models/syringe/meshes/: syringe_part_v3.mtl
surgical_tools_sorter/models/table/: table_link.sdf
surgical_tools_sorter/models/table/meshes/: table_link.STL  table_link.mtl
surgical_tools_sorter/models/tray/: tray_link.sdf
surgical_tools_sorter/models/tray/meshes/: tray_link_v2.mtl
surgical_tools_sorter/models/tweezer/: tweezer.sdf
surgical_tools_sorter/models/tweezer/meshes/: tweezers_part_v3.mtl
surgical_tools_sorter/models/vaccine_bottle/: ibuprofen.sdf  propofol.sdf
surgical_tools_sorter/models/vaccine_bottle/meshes/: ibuprofen.mtl  propofol.mtl
surgical_tools_sorter/scripts/perception/: tools_in_tray.py
surgical_tools_sorter/worlds/: just_arm.sdf  tool_sorter_world.sdf
